fixed DRY code for dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ html {
 body {
 	width: 100%;
 	height: 100%;
-	background-color: white;
 	font-family: "Comfortaa", cursive;
 }
 h2 {
@@ -76,6 +75,13 @@ button:hover {
 }
 /* END GENERAL CLASSES AND SELECTORS/PSEUDO SELECTORS ETC */
 
+/* START INITIAL WRAPPER */
+/* START INITIAL WRAPPER */
+#dark-mode-wrapper {
+	transition: background-color 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+/* START INITIAL WRAPPER */
+/* START INITIAL WRAPPER */
 /* START HEADER */
 /* START HEADER */
 #r-nav {
@@ -173,6 +179,7 @@ button:hover {
 /* START HOME PAGE */
 /* START HOME PAGE */
 .light-bkg {
+	transition: background-color 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
 	background-color: white;
 }
 .home-bkg {
@@ -181,12 +188,12 @@ button:hover {
 		url(./bkg.jpg);
 }
 .dark-bkg {
+	transition: background-color 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
 	background-color: #131516;
 	color: white;
 }
 
 #home-wrapper {
-	transition: background-color 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
 	width: 100%;
 	height: 80vh;
 	background-size: cover;
@@ -236,7 +243,6 @@ button:hover {
 }
 
 #about-wrapper {
-	transition: background-color 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
 	display: flex;
 	justify-content: center;
 }
@@ -280,9 +286,6 @@ button:hover {
 #creations-heading h1 {
 	font-family: "Encode Sans SC", sans-serif;
 	font-weight: 400;
-}
-#creations {
-	transition: background-color 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
 /* START IMAGE GRIDS AND CONTACT GRID */
@@ -377,7 +380,6 @@ button:hover {
 /* END IMAGE GRIDS AND CONTACT GRID */
 
 #contact {
-	transition: background-color 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
 	display: flex;
 	justify-content: center;
 }
@@ -404,7 +406,6 @@ button:hover {
 }
 
 #footer {
-	transition: background-color 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
 	width: 100%;
 }
 
